--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "cinetpay-node-sdk": "^1.0.3",
     "node-cinetpay": "^1.0.6",
+    "node-libcurl": "^4.0.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
