--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "node-cinetpay": "^1.0.6",
     "node-libcurl": "^4.0.0",
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^4.1.2",
     "vue": "^3.2.47",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
