--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-libcurl": "^4.0.0",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^4.1.2",
+    "sweetalert2": "^11.15.10",
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.2.47",
     "vue-i18n": "^10.0.4",
