--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Easybank",
-  "version": "0.0.0",
+  "name": "Wandabook",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -19,11 +19,12 @@
     "sweetalert2": "^11.15.10",
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.2.47",
-    "vue-i18n": "^10.0.4",
+    "vue-i18n": "^10.0.7",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
+    "@types/vue-i18n": "^7.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
